--- a/06.Real-Time-Web-app-with-Socket-io/node-chat-app/public/index.html
+++ b/06.Real-Time-Web-app-with-Socket-io/node-chat-app/public/index.html
@@ -5,22 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/style.css" />
     <!-- <script src="main.js"></script> -->
 </head>
-<body>
-    <p>Wellcome to the chat</p>
+<body class="chat">
 
-    <ol id="messages"></ol>
+    <div class="chat__sidebar">
+        <h3>People</h3>
+        <div id="users"></div>
+    </div>
 
-    <form id="message-form">
-        <input name="message" type="text" placeholder="Message"></input>
-        <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+    <div class="chat__main">
+        <ol id="messages" class="chat__messages"></ol>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/libs/jquery-3.3.1.min.js"></script>
-    <script src="/js/index.js"></script>
-</body>
+        <div class="chat__footer">
+            <form id="message-form">
+                <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+                <button>Send</button>
+            </form>
+            <button id="send-location">Send location</button>
+        </div>
+    </div>
+
+
+
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/libs/jquery-3.3.1.min.js"></script>
+        <script src="/js/index.js"></script>
+    </body>
 </html>
