--- a/06.Real-Time-Web-app-with-Socket-io/node-chat-app/public/chat.html
+++ b/06.Real-Time-Web-app-with-Socket-io/node-chat-app/public/chat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>Join | ChatApp</title>
@@ -56,6 +56,7 @@
         <script src="/js/libs/jquery-3.3.1.min.js"></script>
         <script src="/js/libs/moment.js"></script>
         <script src="/js/libs/mustache.js"></script>
+        <script src="/js/libs/deparam.js"></script>
         <script src="/js/chat.js"></script>
     </body>
 </html>
